tests/NormalTests/paczka1/fuzzy1/88069241.err
Error in line 6: S860 A418 71,3
Error in line 7: S860 A346 76,8
Error in line 20: AFOTsbr A222 17,5
Error in line 23: hZzrL8II A34` 50,8
Error in line 9: kZ7KAfGZb A346 36,1
Error in line 16: hZzrL8II A346 75,8
